Fix spacing at top of experiments on index

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -108,6 +108,7 @@ body.about_index {
   }
   .project {
     display: table-cell;
+    vertical-align: top;
     width: 330px;
     min-width: 330px;
     max-width: 330px;
